--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 <input id="amiibo-series" name="amiibo-series" type="checkbox">
                </div>
             </div>
+
+            <button id="openAll">Open all boxes</button>
+            <button id="closeAll">Close all boxes</button>
+
         </div>
 
         <div id="amiibos">
